# daqcap

./: .gitignore  COPYING  Makefile.am  bootstrap  configure.ac
example/: Makefile.am  capture.dcap  daqcap  daqcap.c
m4/: daq.m4
module/: Makefile.am  daq_daqcap.c
src/: Makefile.am  daq_capture.c  daq_capture.h
